--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="screen1 ">
             <h2>Qual é a sua sorte de hoje?</h2>
             <p>Abra o biscoito e descubra!</p>
-            <img src="images/fortune-cookie.png" alt="" class="cookie">
+            <img src="images/fortune-cookie.png" alt="" class="cookie" onmouseenter="bgAnimation()">
         </div>
         <div class="screen2 hide">
             <h2>Aqui está a sua sorte de hoje:</h2>
